--- a/catalogue/ecmwf-opendata-forecasts/oper.yaml
+++ b/catalogue/ecmwf-opendata-forecasts/oper.yaml
@@ -1,4 +1,4 @@
-title: Open Data High-resolution Forecasts
+title: ECMWF Open Data High-resolution Forecasts
 description:
   The High-Resolution forecasts (HRES) is a model single run created twice a day giving 10 days forecasts
   based on 00UTC and 12UTC data times.
