--- a/catalogue/ecmwf-forecasts/__collection__.yaml
+++ b/catalogue/ecmwf-forecasts/__collection__.yaml
@@ -1,4 +1,4 @@
-title: ECMWF Open Data real-time forecasts
+title: ECMWF real-time forecasts
 description:
   The High-Resolution forecasts (HRES) is a model single run created twice a day giving 10 days forecasts
   based on 00UTC and 12UTC data times.
