Add item folder

--- a/catalogue/ecmwf-forecasts/opendata-enfo/__item__.yaml
+++ b/catalogue/ecmwf-forecasts/opendata-enfo/__item__.yaml
@@ -1,4 +1,5 @@
-title: ECMWF Open Data Ensemble Forecasts
+title: ECMWF 
+Open Data Ensemble Forecasts
 description:
   The Ensemble Forecast (ENS) is run twice a day producing 15 days forecasts based on 00UTC
   and 12UTC data times.
