--- a/catalogue/era5/reanalysis-era5-land/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-land/__item__.yaml
@@ -1,4 +1,4 @@
-title: ERA5-Land hourly data on Europe
+title: ERA5-Land hourly data over Europe
 abstract:
   ERA5-Land is a reanalysis dataset providing a consistent view of the evolution of land variables
   over several decades at an enhanced resolution compared to ERA5.
