--- a/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
@@ -38,14 +38,15 @@ links:
   href: https://confluence.ecmwf.int/display/CKB/ERA5%3A+data+documentation
   type: text/html
 bbox:
-- - -27
-  - 26
-  - 45
-  - 74
-temporal:
-   interval:
-   - - 1940-01-01
-     - 2023-06-30
+- - -180
+  - -90
+  - 180
+  - 90
+properties:
+  datetime: null
+  start_time: 1940-01-01
+  end_time: 2023-08-31
+  edh_access: charges apply
 license: CC-BY-4.0
 keywords:
 - ERA5
@@ -58,17 +59,19 @@ providers:
 - name: ECMWF
   roles:
   - producer
+  - licensor
   url: https://www.ecmwf.int/
 - name: B-Open
   roles:
   - processor
-  url: https://www.bopen.eu/
-- name: Destination Earth
-  roles:
   - host
-  url: https://destination-earth.eu/
+  url: https://www.bopen.eu/
 assets:
   thumbnail:
     href: https://datastore.copernicus-climate.eu/c3s/published-forms-v2/c3sprod/reanalysis-era5-single-levels/overview.jpg
     roles:
     - thumbnail
+  data:
+    href: https://hedp.s3.gra.perf.cloud.ovh.net/era5/reanalysis-era5-single-levels-1950-2023.zarr/
+    roles:
+    - data
