--- a/catalogue/ecmwf-forecasts/opendata-oper/__item__.yaml
+++ b/catalogue/ecmwf-forecasts/opendata-oper/__item__.yaml
@@ -1,26 +1,10 @@
-title: ECMWF medium-range forecasts
+title: ECMWF high-resolution forecast
 abstract:
-  Medium-range forecasts consist of a single forecast (HRES) and our ensemble (ENS) which together give detailed 
-  information about the evolution of weather up to 15 days ahead
+  The high-resolution forecast is a single forecast included in the ECMWF medium-range forecasts.
+  The forecast has a horizontal resolution of around 9 km and provides a description of a possible evolution of the weather out to 10 days ahead
 description:
-  Medium-range forecasts consist of a single forecast (HRES) and an ensemble (ENS) which together give detailed 
-  information about the evolution of weather up to 15 days ahead. Forecasts are run from initial conditions valid at 00 and 12 UTC, 
-  as well as shorter supplementary forecasts from 06 and 18 UTC. Forecasts become available to users several hours after these times.
-
-  HRES
-
-
-  HRES is a single forecast 
-  (horizontal resolution around 9 km) which provides a description of one possible evolution of the weather out to 10 days ahead.
-
-
-  ENS
-  ENS is an ensemble of 51 forecasts with a horizontal resolution of around 9 km. 
-  It comprises one control forecast (CNTL) plus 50 forecasts each with slightly altered initial conditions and slightly altered model physics.
-
-  ENS is a probabilistic forecast system designed to indicate the range of possible 
-  weather conditions out to 15 days ahead, including the probability of occurrence of particular events 
-  (such as high winds or heavy rain). The greater the spread of results across the ensemble, the greater the uncertainty in the forecast.
+  The high-resolution forecast is a single forecast included in the ECMWF medium-range forecasts.
+  The forecast has a horizontal resolution of around 9 km and provides a description of a possible evolution of the weather out to 10 days ahead
 
 links:
 - title: Medium-range forecasts
@@ -41,7 +25,6 @@ license: CC-BY-4.0  # checked
 keywords:
 - Open data
 - HRES
-- ENS
 - ECMWF
 - forecast
 - weather
