--- a/catalogue/ecmwf-forecasts/opendata-oper/__item__.yaml
+++ b/catalogue/ecmwf-forecasts/opendata-oper/__item__.yaml
@@ -36,17 +36,15 @@ links:
   rel: documentation
   href: https://confluence.ecmwf.int/display/FUG/HRES+-+High-Resolution+Forecast  # broken link
   type: text/html
-extent:
-  spatial:
-    bbox:
-    - - -180
-      - -90
-      - 180
-      - 90
-  temporal:
-    interval:
-    - - null
-      - null
+bbox:
+- -180
+- -90
+- 180
+- 90
+properties:
+  datetime: null
+  start_datetime: null
+  end_datetime: null
 license: CC-BY-4.0  # checked
 keywords:
 - Open data
