--- a/catalogue/era5/reanalysis-era5-land/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-land/__item__.yaml
@@ -32,14 +32,14 @@ links:
   href: https://confluence.ecmwf.int/display/CKB/ERA5-Land%3A+data+documentation
   type: text/html
 bbox:
-- - -27
-  - 26
-  - 45
-  - 74
+- -27
+- 26
+- 45
+- 74
 properties:
   datetime: null
-  start_time: 1950-01-01
-  end_time: 2023-06-30
+  start_datetime: 1950-01-01T00:00:00Z
+  end_datetime: 2023-06-30T00:00:00Z
   edh_access: free of charge
 license: CC-BY-4.0
 keywords:
