--- a/catalogue/ecmwf-forecasts/opendata-oper/__item__.yaml
+++ b/catalogue/ecmwf-forecasts/opendata-oper/__item__.yaml
@@ -40,9 +40,11 @@ providers:
   - host
   url: https://www.bopen.eu/  
 assets:
+  # data:
+  #   href:
+  #   roles:
+  #   - data
   thumbnail:
     href: https://charts.ecmwf.int/streaming/20230926-0540/4b/render-worker-commands-77969c47cb-dx5t5-6fe5cac1a363ec1525f54343b6cc9fd8-QTRinX.png
-  data:
-    href: #  https://hedp.s3.gra.perf.cloud.ovh.net/era5/reanalysis-era5-single-levels-1950-2023.zarr/
     roles:
-    - data
+    - thumbnail
