--- a/catalogue/era5/__collection__.yaml
+++ b/catalogue/era5/__collection__.yaml
@@ -1,5 +1,5 @@
 title: ECMWF fifth generation reanalysis (ERA5)
-abstract:
+dc:abstract:
   ERA5 is the fifth generation ECMWF reanalysis for the global climate and weather.
   Data is available from 1940 onwards.
   Reanalysis combine model data to observations to produce more reliable estimates 
