--- a/catalogue/era5/reanalysis-era5-land/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-land/__item__.yaml
@@ -1,6 +1,3 @@
-title: ERA5-Land hourly data over Europe
-abstract:
-  Europe ERA5-Land hourly data from 1950 to 2023
 description:
   ERA5-Land is a reanalysis dataset providing a consistent view of the evolution of land variables
   over several decades at an enhanced resolution compared to ERA5.
@@ -40,7 +37,10 @@ properties:
   datetime: null
   start_datetime: 1950-01-01T00:00:00Z
   end_datetime: 2023-06-30T00:00:00Z
-  edh_access: free of charge
+  dc:abstract:
+    Europe ERA5-Land hourly data from 1950 to 2023
+  dc:access_rights: free of charge
+  dc:title: ERA5-Land hourly data over Europe
 license: CC-BY-4.0
 keywords:
 - ERA5
