--- a/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
@@ -1,7 +1,3 @@
-title: ERA5 hourly data on the surface
-abstract:
-  Subset of ERA5 reanalysis on the surface (single-levels) for atmospheric, ocean-wave and land surface quantities
-  
 description:
   ERA5 is the fifth generation ECMWF reanalysis for the global climate and weather for the past 8 decades.
   Data is available from 1940 onwards.
@@ -46,7 +42,10 @@ properties:
   datetime: null
   start_datetime: 1940-01-01T00:00:00Z
   end_datetime: 2023-08-31T00:00:00Z
-  edh_access: charges apply
+  dc:abstract:
+    Subset of ERA5 reanalysis on the surface (single-levels) for atmospheric, ocean-wave and land surface quantities
+  dc:access_rights: charges apply
+  dc:title: ERA5 hourly data on the surface
 license: CC-BY-4.0
 keywords:
 - ERA5
