--- a/catalogue/ecmwf-forecasts/opendata-enfo/__item__.yaml
+++ b/catalogue/ecmwf-forecasts/opendata-enfo/__item__.yaml
@@ -17,9 +17,9 @@ bbox:
 - 180
 - 90
 properties:
-  datetime: null
-  start_datetime: #  1940-01-01
-  end_datetime: #  2023-08-31
+  # datetime: null
+  # start_datetime: #  1940-01-01
+  # end_datetime: #  2023-08-31
   dc:abstract:
     An ensemble (ENS) of 51 forecasts with a horizontal resolution of around 9 km. 
     It comprises one control forecast (CNTL) plus 50 forecasts each with slightly altered initial conditions and slightly altered model physics.
