--- a/catalogue/ecmwf-forecasts/opendata-oper/__item__.yaml
+++ b/catalogue/ecmwf-forecasts/opendata-oper/__item__.yaml
@@ -13,9 +13,9 @@ bbox:
 - 180
 - 90
 properties:
-  datetime: null
-  start_datetime: #  1940-01-01
-  end_datetime: #  2023-08-31
+  # datetime: null
+  # start_datetime: #  1940-01-01
+  # end_datetime: #  2023-08-31
   dc:abstract:
     The high-resolution forecast is a single forecast included in the ECMWF medium-range forecasts.
     The forecast has a horizontal resolution of around 9 km and provides a description of a possible evolution of the weather out to 10 days ahead
