--- a/catalogue/era5/reanalysis-era5-land/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-land/__item__.yaml
@@ -34,20 +34,19 @@ bbox:
 - 45
 - 74
 properties:
-  datetime: null
   start_datetime: 1950-01-01T00:00:00Z
   end_datetime: 2023-06-30T00:00:00Z
   dc:abstract:
     Europe ERA5-Land hourly data from 1950 to 2023
   dc:access_rights: free of charge
   dc:title: ERA5-Land hourly data over Europe
+  dc:subject:
+  - ERA5
+  - Land
+  - ECMWF
+  - reanalysis
+  - weather
 license: CC-BY-4.0
-keywords:
-- ERA5
-- Land
-- ECMWF
-- reanalysis
-- weather
 providers:
 - name: ECMWF
   roles:
