--- a/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
@@ -39,21 +39,20 @@ bbox:
 - 180
 - 90
 properties:
-  datetime: null
   start_datetime: 1940-01-01T00:00:00Z
   end_datetime: 2023-08-31T00:00:00Z
   dc:abstract:
     Subset of ERA5 reanalysis on the surface (single-levels) for atmospheric, ocean-wave and land surface quantities
   dc:access_rights: charges apply
   dc:title: ERA5 hourly data on the surface
+  dc:subject:
+  - ERA5
+  - ECMWF
+  - single levels
+  - surface
+  - reanalysis
+  - weather
 license: CC-BY-4.0
-keywords:
-- ERA5
-- ECMWF
-- single levels
-- surface
-- reanalysis
-- weather
 providers:
 - name: ECMWF
   roles:
