Update items description -> properties/dc:description

--- a/catalogue/ecmwf-forecasts/opendata-oper/__item__.yaml
+++ b/catalogue/ecmwf-forecasts/opendata-oper/__item__.yaml
@@ -1,7 +1,3 @@
-description:
-  The high-resolution forecast is a single forecast included in the ECMWF medium-range forecasts.
-  The forecast has a horizontal resolution of around 9 km and provides a description of a possible evolution of the weather out to 10 days ahead
-
 links:
 - title: Medium-range forecasts
   rel: documentation
@@ -27,6 +23,9 @@ properties:
   - ECMWF
   - forecast
   - weather
+  dc:description:
+    The high-resolution forecast is a single forecast included in the ECMWF medium-range forecasts.
+    The forecast has a horizontal resolution of around 9 km and provides a description of a possible evolution of the weather out to 10 days ahead
 license: CC-BY-4.0  # checked
 providers:
 - name: ECMWF
