--- a/catalogue/ecmwf-forecasts/opendata-enfo/__item__.yaml
+++ b/catalogue/ecmwf-forecasts/opendata-enfo/__item__.yaml
@@ -1,11 +1,3 @@
-description:
-  An ensemble (ENS) of 51 forecasts with a horizontal resolution of around 9 km. 
-  It comprises one control forecast (CNTL) plus 50 forecasts each with slightly altered initial conditions and slightly altered model physics.
-
-  ENS is a probabilistic forecast system designed to indicate the range of possible 
-  weather conditions out to 15 days ahead, including the probability of occurrence of particular events 
-  (such as high winds or heavy rain). The greater the spread of results across the ensemble, the greater the uncertainty in the forecast.
-
 links:
 - title: Medium-range forecasts
   rel: documentation
@@ -31,6 +23,13 @@ properties:
   - ECMWF
   - forecast
   - weather
+  dc:description:
+    An ensemble (ENS) of 51 forecasts with a horizontal resolution of around 9 km. 
+    It comprises one control forecast (CNTL) plus 50 forecasts each with slightly altered initial conditions and slightly altered model physics.
+
+    ENS is a probabilistic forecast system designed to indicate the range of possible 
+    weather conditions out to 15 days ahead, including the probability of occurrence of particular events 
+    (such as high winds or heavy rain). The greater the spread of results across the ensemble, the greater the uncertainty in the forecast.
 license: CC-BY-4.0  # checked
 providers:
 - name: ECMWF
