removed extra colons

--- a/catalogue/eurostat/__collection__.yaml
+++ b/catalogue/eurostat/__collection__.yaml
@@ -13,7 +13,7 @@ description:
   but also for the EFTA and candidate countries.
 
   Eurostat shall be in charge of the development, production
-  and dissemination of European statistics, in particular:
+  and dissemination of European statistics, in particular
   (a) collect and aggregate the statistical information necessary
   to compile European statistics; (b) develop and promote
   statistical standards, methods and procedures; (c) steer the
@@ -44,7 +44,7 @@ description:
   and definitions.
 
   Eurostat shall coordinate the development and production of other
-  statistics. For that purpose, it shall: (a) optimise the use of
+  statistics. For that purpose, it shall (a) optimise the use of
   existing information that can be used for statistical purposes,
   in order to ensure quality and minimise burden for respondents;
   Eurostat shall invite any service of the Commission concerned to
