--- a/catalogue/eurostat/geoprocessed-eurostat-mortality/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-mortality/__item__.yaml
@@ -33,7 +33,7 @@ properties:
     Data are collected cross classified by sex, 5-year age-groups and
     NUTS3 region (NUTS2021). The age breakdown by 5-year age group is
     the most significant and should be considered by the reporting countries
-    as the main option; when that is not possible, data may be provided
+    as the main option, when that is not possible, data may be provided
     with less granularity. Similar with the regional structure, data
     granularity varies with the country.
 
