--- a/catalogue/eurostat/geoprocessed-eurostat-population/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-population/__item__.yaml
@@ -27,7 +27,7 @@ properties:
     project. UNIDEMO is Eurostat’s main annual demographic data
     collection and aims to gather information on demography and
     migration. UNIDEMO collects data at national and regional
-    levels by various breakdowns on: population stocks;
+    levels by various breakdowns on population stocks;
     vital events (live births and deaths); marriages; divorces;
     and migration flows. Each country must send the statistics
     for the reference year (T) to Eurostat by 31 December of
@@ -42,7 +42,7 @@ properties:
     These data are broken down by NUTS 2 and 3 levels.
     The current online demographic data refers to the NUTS
     2016 classification, which subdivides the territory of
-    the European Union into: 104 regions at NUTS level 1;
+    the European Union into 104 regions at NUTS level 1;
     281 at NUTS level 2; and 1348 at NUTS level 3.
 
 license: https://ec.europa.eu/info/legal-notice_en
