add dummy thumbnails to eurostat data

--- a/catalogue/eurostat/geoprocessed-eurostat-chdd/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-chdd/__item__.yaml
@@ -51,7 +51,7 @@ providers:
   url: https://www.mundialis.de/
 assets:
   thumbnail:
-    href: XXX
+    href: https://apps.mundialis.de/thumbnails/2/thumbnail.png
     roles:
     - thumbnail
   data:
