--- a/catalogue/eurostat/__collection__.yaml
+++ b/catalogue/eurostat/__collection__.yaml
@@ -87,4 +87,4 @@ providers:
   url: https://ec.europa.eu/eurostat/web/main/home
 assets:
   thumbnail:
-    href:
+    href: https://apps.mundialis.de/thumbnails/1/thumbnail.png
