--- a/catalogue/ecmwf-forecasts/opendata-enfo/__item__.yaml
+++ b/catalogue/ecmwf-forecasts/opendata-enfo/__item__.yaml
@@ -48,6 +48,6 @@ assets:
   #   roles:
   #   - data
   thumbnail:
-    href: https://charts.ecmwf.int/streaming/20231002-0540/33/render-worker-commands-77969c47cb-48pqz-6fe5cac1a363ec1525f54343b6cc9fd8-flSrLi.png
+    href: 
     roles:
     - thumbnail
