fix format in collections and items

--- a/catalogue/ecmwf-forecasts/__collection__.yaml
+++ b/catalogue/ecmwf-forecasts/__collection__.yaml
@@ -51,11 +51,9 @@ providers:
   - producer
   - licensor
   url: https://www.ecmwf.int/
-assets:
-  # data:
-  #   href:
-  #   roles:
-  #   - data
-  thumbnail:
-    href: 
-    - thumbnail
+# assets:
+#   data:
+#     href:
+#     roles:
+#     - data
+
