--- a/catalogue/eurostat/geoprocessed-eurostat-population/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-population/__item__.yaml
@@ -21,29 +21,29 @@ properties:
   - EUROPE
   - geoprocessed
   - geospatial
-  dc:description:
-    Each year Eurostat collects demographic data at regional level
-    from 37 countries as part of the Unified Demography (Unidemo)
-    project. UNIDEMO is Eurostat’s main annual demographic data
-    collection and aims to gather information on demography and
-    migration. UNIDEMO collects data at national and regional
-    levels by various breakdowns on population stocks;
-    vital events (live births and deaths); marriages; divorces;
-    and migration flows. Each country must send the statistics
-    for the reference year (T) to Eurostat by 31 December of
-    the following calendar year (T+1). Eurostat then publishes
-    the data in March of the calendar year after that (T+2).
+description:
+  Each year Eurostat collects demographic data at regional level
+  from 37 countries as part of the Unified Demography (Unidemo)
+  project. UNIDEMO is Eurostat’s main annual demographic data
+  collection and aims to gather information on demography and
+  migration. UNIDEMO collects data at national and regional
+  levels by various breakdowns on population stocks;
+  vital events (live births and deaths); marriages; divorces;
+  and migration flows. Each country must send the statistics
+  for the reference year (T) to Eurostat by 31 December of
+  the following calendar year (T+1). Eurostat then publishes
+  the data in March of the calendar year after that (T+2).
 
-    Demographic data at regional level include statistics on the
-    population at the end of the calendar year and on live births
-    and deaths during that year, according to the official
-    classification for statistics at regional level
-    (NUTS - nomenclature of territorial units for statistics).
-    These data are broken down by NUTS 2 and 3 levels.
-    The current online demographic data refers to the NUTS
-    2016 classification, which subdivides the territory of
-    the European Union into 104 regions at NUTS level 1;
-    281 at NUTS level 2; and 1348 at NUTS level 3.
+  Demographic data at regional level include statistics on the
+  population at the end of the calendar year and on live births
+  and deaths during that year, according to the official
+  classification for statistics at regional level
+  (NUTS - nomenclature of territorial units for statistics).
+  These data are broken down by NUTS 2 and 3 levels.
+  The current online demographic data refers to the NUTS
+  2016 classification, which subdivides the territory of
+  the European Union into 104 regions at NUTS level 1;
+  281 at NUTS level 2; and 1348 at NUTS level 3.
 
 license: https://ec.europa.eu/info/legal-notice_en
 providers:
