Add link to manual thumbnail

--- a/catalogue/era5/ecv-for-climate-change/__item__.yaml
+++ b/catalogue/era5/ecv-for-climate-change/__item__.yaml
@@ -77,4 +77,7 @@ assets:
     href: s3://hedp/era5/ecv-for-climate-change-1979-2023.zarr
     roles:
     - data
-
+  thumbnail:
+    href: https://storage.gra.cloud.ovh.net/v1/AUTH_cd5fd5eb828b4e7c89f0880ea1d99126/earthdatahub-static/catalogue/collections/era5/items/ecv-for-climate-change.png
+    roles:
+    - thumbnail
