--- a/catalogue/eurostat/geoprocessed-eurostat-chdd/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-chdd/__item__.yaml
@@ -12,9 +12,9 @@ properties:
   start_datetime: 2000-01-01T00:00:00Z
   end_datetime: 2021-01-01T00:00:00Z
   dc:abstract:
-    Europe EUROSTAT CDD & HDD data from 1979 to 2021
+    Europe Eurostat CDD & HDD data from 1979 to 2021
   dc:access_rights: charges apply
-  dc:title: EUROSTAT CDD & HDD data over Europe
+  dc:title: Eurostat CDD & HDD data over Europe
   dc:subject:
   - EUROSTAT
   - CDD
