--- a/catalogue/eurostat/geoprocessed-eurostat-mortality/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-mortality/__item__.yaml
@@ -12,9 +12,9 @@ properties:
   start_datetime: 2015-01-05T00:00:00Z
   end_datetime: 2019-12-30T00:00:00Z
   dc:abstract:
-    Europe EUROSTAT mortality data from 2015 to 2019
+    Europe Eurostat mortality data from 2015 to 2019
   dc:access_rights: charges apply
-  dc:title: EUROSTAT mortality data over Europe
+  dc:title: Eurostat mortality data over Europe
   dc:subject:
   - EUROSTAT
   - mortality
