--- a/catalogue/eurostat/geoprocessed-eurostat-population/__item__.yaml
+++ b/catalogue/eurostat/geoprocessed-eurostat-population/__item__.yaml
@@ -12,9 +12,9 @@ properties:
   start_datetime: 1990-01-01T00:00:00Z
   end_datetime: 2022-01-01T00:00:00Z
   dc:abstract:
-    Europe EUROSTAT population data from 1990 to 2022
+    Europe Eurostat population data from 1990 to 2022
   dc:access_rights: charges apply
-  dc:title: EUROSTAT population data over Europe
+  dc:title: Eurostat population data over Europe
   dc:subject:
   - EUROSTAT
   - population
