--- a/catalogue/era5/reanalysis-era5-land/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-land/__item__.yaml
@@ -21,7 +21,7 @@ properties:
   - ECMWF
   - reanalysis
   - weather
-  dc:description:
+  dc:description: |
     ERA5-Land is a reanalysis dataset providing a consistent view of the evolution of land variables
     over several decades at an enhanced resolution compared to ERA5.
 
@@ -46,6 +46,22 @@ properties:
     Here we propose a focus on Europe ERA5-Land hourly data from 1950 to 2023 as a zarr store optimised for time-analysis.
 
     Access is free to registered user thank to the support of the Destination Earth initiative.
+
+
+    How to access:
+
+
+    ```python
+
+    import xarray as xr
+
+    ds = xr.open_dataset(
+        "s3://hedp/era5/reanalysis-era5-land-europe-1950-2023.zarr",
+        engine="zarr",
+        chunks={},
+    )
+    ```
+
 license: CC-BY-4.0
 providers:
 - name: ECMWF
