--- a/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
+++ b/catalogue/era5/reanalysis-era5-single-levels/__item__.yaml
@@ -22,7 +22,7 @@ properties:
   - surface
   - reanalysis
   - weather
-  dc:description:
+  dc:description: |
     ERA5 is the fifth generation ECMWF reanalysis for the global climate and weather for the past 8 decades.
     Data is available from 1940 onwards.
 
@@ -51,6 +51,22 @@ properties:
     or a dedicated pressure level in the atmosphere.
     
     Here we propose a focus on ERA5 hourly data on single levels (atmospheric, ocean-wave and land surface quantities) from 1940 to 2023
+
+
+    How to access:
+
+
+    ```python
+
+    import xarray as xr
+    
+    ds = xr.open_dataset(
+        "s3://hedp/era5/reanalysis-era5-single-levels-1940-2023.zarr",
+        engine="zarr",
+        chunks={},
+    )
+    ```
+
 license: CC-BY-4.0
 providers:
 - name: ECMWF
