fix_hedp_issue_70

--- a/catalogue/eurostat/__collection__.yaml
+++ b/catalogue/eurostat/__collection__.yaml
@@ -75,7 +75,11 @@ extent:
       -
 license: MISSING
 keywords:
-- EUROSTAT
+- eurostat
+- statistics
+- energy
+- population
+- heating
 providers:
 - name: EUROSTAT
   roles:
